Use datetime package for date formatting.
Also: add additional Beta function notation in distribution table footnote.

--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -13,6 +13,7 @@
 \usepackage{amsmath,amssymb}
 \usepackage{booktabs}
 \usepackage{caption}
+\usepackage{datetime}
 \usepackage{environ}
 \usepackage{float}
 \usepackage{enumitem}
@@ -81,7 +82,7 @@
   \vfill
   \footnotesize{
   Copyright \copyright{} 
-  \href{http://matthias.vallentin.net}{Matthias Vallentin}, 2010\\
+  \href{http://matthias.vallentin.net}{Matthias Vallentin}, \number\year\\
     \email\\[2ex]
     \today
   }
@@ -262,8 +263,8 @@
 \end{center}
 
 \footnotetext{We use the notation $\gamma(s,x)$ and $\Gamma(x)$ to refer to the
-Gamma functions (see \S\ref{sec:math:gamma}), and use $\text{B}(x,y)$ to refer
-to the Beta function (see \S\ref{sec:math:beta}).}
+Gamma functions (see \S\ref{sec:math:gamma}), and use $\text{B}(x,y)$ and $I_x$
+to refer to the Beta functions (see \S\ref{sec:math:beta}).}
 
 \begin{figure}[H]
   \includegraphics[scale=0.35]{figs/uniform-continuous.pdf}
