Fix headings for finite and binomial series.

--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -2383,26 +2383,23 @@ P(j/n)
 \subsection{Series}
 
 \begin{multicols}{2}
-Finite
-\begin{itemize}
+\begin{titemize}{Finite}
   \item $\displaystyle\sum_{k=1}^n k = \frac{n(n+1)}{2}$
   \item $\displaystyle\sum_{k=1}^n (2k-1) = n^2$
   \item $\displaystyle\sum_{k=1}^n k^2 = \frac{n(n+1)(2n+1)}{6}$
   \item $\displaystyle\sum_{k=1}^n k^3 = \left(\frac{n(n+1)}{2}\right)^2$
   \item $\displaystyle\sum_{k=0}^n c^k = \frac{c^{n+1}-1}{c-1} \quad c\neq1$
-\end{itemize}
+\end{titemize}
 
-Binomial
-\begin{itemize}
+\begin{titemize}{Binomial}
   \item $\displaystyle\sum_{k=0}^n \binom{n}{k} = 2^n$
   \item $\displaystyle\sum_{k=0}^n \binom{r+k}{k}=\binom{r+n+1}{n}$
   \item $\displaystyle\sum_{k=0}^n \binom{k}{m}=\binom{n+1}{m+1}$
-  \item \textsc{Vandermonde}'s Identity:
+  \item \textsc{Vandermonde}'s Identity:\\
     $\displaystyle\sum_{k=0}^r \binom{m}{k}\binom{n}{r-k}=\binom{m+n}{r}$
-  \item Binomial Theorem:
+  \item Binomial Theorem:\\
     $\displaystyle\sum_{k=0}^n \binom{n}{k}a^{n-k}b^k = (a+b)^n$ 
-\end{itemize}
-
+\end{titemize}
 \end{multicols}
 
 Infinite
