Remove day from cover page date.

--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -13,7 +13,7 @@
 \usepackage{amsmath,amssymb}
 \usepackage{booktabs}
 \usepackage{caption}
-\usepackage{datetime}
+\usepackage[nodayofweek]{datetime}
 \usepackage{environ}
 \usepackage{float}
 \usepackage{enumitem}
