--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -270,7 +270,9 @@ to refer to the Beta functions (see \S\ref{sec:math:beta}).}
   \includegraphics[scale=0.35]{figs/uniform-continuous.pdf}
   \includegraphics[scale=0.35]{figs/normal.pdf}
   \includegraphics[scale=0.35]{figs/lognormal.pdf}
+  \includegraphics[scale=0.35]{figs/student.pdf}
   \includegraphics[scale=0.35]{figs/chisquare.pdf}
+  \includegraphics[scale=0.35]{figs/f.pdf}
   \includegraphics[scale=0.35]{figs/exponential.pdf}
   \includegraphics[scale=0.35]{figs/gamma.pdf}
   \includegraphics[scale=0.35]{figs/invgamma.pdf}
