Move Gamma/Beta function footnote to first table.

--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -114,7 +114,8 @@
 \small
 \begin{tabular}{@{}l*6{>{\begin{math}\displaystyle}c<{\end{math}}}@{}}
   \toprule &&&&&& \\[-2ex]
-  & \text{Notation} & F_X(x) & f_X(x) & \E{X} & \V{X} & M_X(s) \\[1ex]
+  & \text{Notation}\footnotemark  
+  & F_X(x) & f_X(x) & \E{X} & \V{X} & M_X(s) \\[1ex]
 
   \midrule
 
@@ -163,6 +164,10 @@
 
 \end{center}
 
+\footnotetext{We use the notation $\gamma(s,x)$ and $\Gamma(x)$ to refer to the
+Gamma functions (see \S\ref{sec:math:gamma}), and use $\text{B}(x,y)$ and $I_x$
+to refer to the Beta functions (see \S\ref{sec:math:beta}).}
+
 \pagebreak
 
 \subsection{Continuous Distributions}
@@ -171,7 +176,7 @@
 \small
 \begin{tabular}{@{}l*6{>{\begin{math}\displaystyle}c<{\end{math}}}@{}}
   \toprule &&&&&& \\[-2ex]
-  & \text{Notation}\footnotemark 
+  & \text{Notation}
   & F_X(x) & f_X(x) & \E{X} & \V{X} & M_X(s) \\[1ex]
 
   \midrule
@@ -261,10 +266,6 @@
   \bottomrule
 \end{tabular}
 \end{center}
-
-\footnotetext{We use the notation $\gamma(s,x)$ and $\Gamma(x)$ to refer to the
-Gamma functions (see \S\ref{sec:math:gamma}), and use $\text{B}(x,y)$ and $I_x$
-to refer to the Beta functions (see \S\ref{sec:math:beta}).}
 
 \begin{figure}[H]
   \includegraphics[scale=0.35]{figs/uniform-continuous.pdf}
