Use \displaystyle for Gamma functions.

--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -2353,9 +2353,12 @@ P(j/n)
 \label{sec:math:gamma}
 
 \begin{itemize}
-  \item Ordinary: $\Gamma(s) = \int_0^\infty t^{s-1} e^{-t}dt$
-  \item Upper incomplete: $\Gamma(s,x) = \int_x^\infty t^{s-1} e^{-t}dt$
-  \item Lower incomplete: $\gamma(s,x) = \int_0^x t^{s-1} e^{-t}dt$
+  \item Ordinary:
+    $\displaystyle\Gamma(s) = \int_0^\infty t^{s-1} e^{-t}dt$
+  \item Upper incomplete:
+    $\displaystyle\Gamma(s,x) = \int_x^\infty t^{s-1} e^{-t}dt$
+  \item Lower incomplete:
+    $\displaystyle\gamma(s,x) = \int_0^x t^{s-1} e^{-t}dt$
   \item $\Gamma(\alpha + 1) = \alpha \Gamma(\alpha) \qquad \alpha>1$
   \item $\Gamma(n) = (n-1)! \qquad n \in \mathbb N$
   \item $\Gamma(1/2) = \sqrt{\pi}$
