Remove redundant Markov chain definition.

--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -1884,7 +1884,7 @@ Stochastic Process
 
 \subsection{Markov Chains}
 
-Markov Chain $\{X_n: n \in T\}$
+Markov Chain
 \[\Pr{X_n = x \giv X_0,\dots,X_{n-1}} = \Pr{X_n = x \giv X_{n-1}}
 \quad \forall n\in T, x \in \mathcal{X}\]
 
