Rename cheat sheet to cookbook.

--- a/cookbook.tex
+++ b/cookbook.tex
@@ -1,6 +1,6 @@
 %
 %                           Probability and Statistics 
-%                                  Cheat Sheet
+%                                  Cookbook
 %
 % ----------------------------------------------------------------------------
 %
@@ -480,8 +480,8 @@ Variance
 \begin{itemize}
   \item $\V{X} = \sigma_X^2 = \E{(X-\E{X})^2} = \E{X^2} - \E{X}^2$
   \item $\V{\displaystyle\sum_{i=1}^n X_i} = 
-    \displaystyle\sum_{i=1}^n \V{X_i} + 
-    2\sum_{i\ne j}\cov{X_i,Y_j}$
+    \displaystyle\sum_{i=1}^n \V{X_i} + 2\sum_{i\ne j}\cov{X_i,Y_j}$
+%    \stackrel{X_i \ind X_j}{=}\sum_{i=1}^n\V{X_i}$
   \item $\V{\displaystyle\sum_{i=1}^n X_i} = 
     \displaystyle\sum_{i=1}^n\V{X_i} \quad$ iff $X_i \ind X_j$
 \end{itemize}
@@ -2508,7 +2508,7 @@ Balls and Urns  \qquad $f: B \to U$ \qquad \distinguishable = distinguishable,
 %  \end{itemize}
 
 \bibliographystyle{abbrv}
-\bibliography{cheatsheet}
+\bibliography{cookbook}
 
 \end{multicols*}
 
