--- a/lang-en.tex
+++ b/lang-en.tex
@@ -1,13 +1,16 @@
 %
-% English language definitions for the TODO
+% Language definitions for the Probability and Statistics Cookbook.
+%
+% Language: English
+% Author: Matthias Vallentin
 %
 % Copyright © Matthias Vallentin <vallentin@icir.org>, 2011
 %
 
 % Preamble
 \def\maintitle{Probability and Statistics}
-\def\subtitle{Cheat Sheet}
-\def\disclaimer{This cheat sheet integrates a variety of topics in probability
+\def\subtitle{Cookbook}
+\def\disclaimer{This cookbook integrates a variety of topics in probability
 theory and statistics. It is based on literature
 \cite{Hoel72,Wasserman03,Shumway06} and in-class material from courses of the
 statistics department at the University of California in Berkeley but also
