--- a/cookbook.tex
+++ b/cookbook.tex
@@ -212,7 +212,7 @@
 
   \T{Chi-square} & \chisq &
   \frac{1}{\Gamma(k/2)} \gamma\left(\frac{k}{2}, \frac{x}{2}\right) & 
-  \frac{1}{2^{k/2} \Gamma(k/2)} x^{k/2} e^{-x/2}&
+  \frac{1}{2^{k/2} \Gamma(k/2)} x^{k/2-1} e^{-x/2}&
   k & 2k & 
   (1-2s)^{-k/2} \; s<1/2\\[3ex]
 
