--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+2012-08-13  Matthias Vallentin  <vallentin@icir.org>
+
+    * Fix variance of Student's t distribution. (Haomin Liao and Vincent Yang)
+
+
 2012-07-03  Matthias Vallentin  <vallentin@icir.org>
 
     * Create ggplot2 version of the distribution plots. The new plots work
