Demote invalid equivalence to implication.

--- a/cookbook.tex
+++ b/cookbook.tex
@@ -495,7 +495,7 @@
     \displaystyle\sum_{i=1}^n \V{X_i} + 2\sum_{i\ne j}\cov{X_i,Y_j}$
 %    \stackrel{X_i \ind X_j}{=}\sum_{i=1}^n\V{X_i}$
   \item $\V{\displaystyle\sum_{i=1}^n X_i} =
-    \displaystyle\sum_{i=1}^n\V{X_i} \quad$ iff $X_i \ind X_j$
+    \displaystyle\sum_{i=1}^n\V{X_i} \quad$ if $X_i \ind X_j$
 \end{titemize}
 
 \T{Standard deviation}
