--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,13 @@
+2012-09-16  Matthias Vallentin  <vallentin@icir.org>
+
+    * Address a couple of issues pointed out by Michael Turmon:
+      
+      - Fix wrong label of the F distribution plot.
+      - In §5, sum of variances: demote invalid equivalence to an implication.
+      - Fix incorrect abbreviation of the Strong Law of Large Numbers (SLLN).
+      - Remove unnecessary finite variance restriction in LLN.
+
+
 2012-08-13  Matthias Vallentin  <vallentin@icir.org>
 
     * Fix variance of Student's t distribution. (Haomin Liao and Vincent Yang)
