--- a/cookbook.tex
+++ b/cookbook.tex
@@ -2462,14 +2462,14 @@ P(j/n)
 \T{Balls and Urns} \qquad $f: B \to U$ \qquad
 \distinguishable = \T{distinguishable},
 \indistinguishable = \T{indistinguishable}.
-\begin{center}
+\begin{cente}r
   \begin{tabular}[h]{|l*4{|>{\begin{math}\displaystyle}c<{\end{math}}}|}
     \hline &&&&\\[-1.5ex]
     $|B|=n$, $|U|=m$ & f \text{ \T{arbitrary}} & f \text{ \T{injective}} &
     f \text{ \T{surjective}} & f \text{ \T{bijective}} \\[1ex]
     \hline
     \hline &&&&\\[-2ex]
-    $B:\distinguishable,\; U:\indistinguishable$ &
+    $B:\distinguishable,\; U:\distinguishable$ &
       m^n & \begin{cases} m^{\underline n} & m \ge n\\
       0 & \text{\T{else}} \end{cases} & m!\,\stirling{n}{m} &
       \begin{cases} n! & m = n\\ 0 & \text{\T{else}} \end{cases}\\[3ex]
