--- a/cookbook.tex
+++ b/cookbook.tex
@@ -781,7 +781,7 @@ Z_n &\approx \norm[0,1] \\
 \samplemean &\approx \norm[\mu,\frac{\sigma^2}{n}] \\
 \samplemean - \mu &\approx \norm[0,\frac{\sigma^2}{n}] \\
 \sqrt{n}(\samplemean - \mu) &\approx \norm[0,\sigma^2] \\
-\frac{\sqrt{n}(\samplemean - \mu)}{n} &\approx \norm[0,1] \\
+\frac{\sqrt{n}(\samplemean - \mu)}{\sigma} &\approx \norm[0,1] \\
 \end{align*}
 
 \T{Continuity correction}
