--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+2014-01-24  Matthias Vallentin  <vallentin@icir.org>
+
+    * Fix wrong denominator in alternative CLT representations. (Lluís Ramon)
+
+
 2012-10-10  Matthias Vallentin  <vallentin@icir.org>
 
     * Fix wrong label in balls and urns table. In the first row, both balls and
