--- a/cookbook.tex
+++ b/cookbook.tex
@@ -2476,7 +2476,7 @@ P(j/n)
       \begin{cases} n! & m = n\\ 0 & \text{\T{else}} \end{cases}\\[3ex]
     \hline &&&&\\[-2ex]
     $B:\indistinguishable,\; U:\distinguishable$ &
-      \binom{n+n-1}{n} & \binom{m}{n} &
+      \binom{m+n-1}{n} & \binom{m}{n} &
       \binom{n-1}{m-1} &
       \begin{cases} 1 & m = n\\ 0 & \text{\T{else}} \end{cases}\\[3ex]
     \hline &&&&\\[-2ex]
